--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,14 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Article and Products</title>
+  <title>Articles and Products</title>
 </head>
 
 <body>
+  {{{body}}}
 </body>
-<div>
-  {{title}}
-</div>
-
 
 </html>
