--- a/views/templates/products/product.hbs
+++ b/views/templates/products/product.hbs
@@ -11,12 +11,13 @@
 <body>
   {{>header}}
 
-  <h1>{{title}}</h1>
-  <h3>by: {{author}}</h2>
-    <p>{{body}}</p>
+  <h2>Name: {{name}}</h2>
+  <h3>Price: {{price}}</h3>
+  <p>Inventory in stock: {{inventory}}</p>
+  <p>ID Number: {{id}}</p>
 
 
-    {{>footer}}
+  {{>footer}}
 </body>
 
 </html>
