--- a/views/templates/articles/index.hbs
+++ b/views/templates/articles/index.hbs
@@ -1,7 +1,25 @@
-<h1>Articles</h1>
-{{#each articles}}
-<h2>{{title}}</h2>
-<h3>by: {{author}}</h3>
-<p>{{body}}</p>
-</br>
-{{/each}}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
+<body>
+  {{>header}}
+  <p>{{message}}</p>
+  <h1>Articles</h1>
+  {{#each articles}}
+  <h2>{{title}}</h2>
+  <h3>by: {{author}}</h3>
+  <p>{{body}}</p>
+  </br>
+  {{/each}}
+
+  {{>footer}}
+</body>
+
+</html>
