--- a/views/templates/products/index.hbs
+++ b/views/templates/products/index.hbs
@@ -10,13 +10,17 @@
 
 <body>
   {{>header}}
+  <p>{{message}}</p>
+  <h1>Products</h1>
+  {{#each products}}
+  <h2>Name: {{name}}</h2>
+  <h3>Price: {{price}}</h3>
+  <p>Inventory in stock: {{inventory}}</p>
+  <p>ID Number: {{id}}</p>
+  </br>
+  {{/each}}
 
-  <h1>{{title}}</h1>
-  <h3>by: {{author}}</h2>
-    <p>{{body}}</p>
-
-
-    {{>footer}}
+  {{>footer}}
 </body>
 
 </html>
