--- a/views/templates/articles/new.hbs
+++ b/views/templates/articles/new.hbs
@@ -13,15 +13,15 @@
   <form method="POST" action="/articles">
     <label for="title">Title</label>
     </br>
-    <input type="text" name="title" id="title" value="{{title}}">
+    <input type="text" name="title" id="title">
     </br>
     <label for="author">Author</label>
     </br>
-    <input type="text" name="author" id="author" value="{{author}}">
+    <input type="text" name="author" id="author">
     </br>
     <label for="body">Body</label>
     </br>
-    <input name="body" id="body" value="{{body}}">
+    <input name="body" id="body">
     </br>
     <input type="submit" value="Submit">
   </form>
