--- a/views/templates/products/product.hbs
+++ b/views/templates/products/product.hbs
@@ -17,6 +17,10 @@
   <p>ID Number: {{id}}</p>
 
 
+  <form method="GET" action="/products/{{id}}/edit">
+
+    <input type="submit" value="EDIT">
+  </form>
   {{>footer}}
 </body>
 
