--- a/views/templates/products/edit.hbs
+++ b/views/templates/products/edit.hbs
@@ -1,5 +1,5 @@
 <h1>Add New Product</h1>
-<form method="POST" action="/products">
+<form method="POST" action="/products/{{id}}?_method=PUT">
   <label for="name">Name</label>
   <input type="text" name="name" id="name" value="{{name}}">
   <label for="price">Price</label>
@@ -7,5 +7,9 @@
   <label for="inventory">Inventory</label>
   <input type="text" name="inventory" id="inventory" value="{{inventory}}">
   <input type="submit" value="Submit">
+</form>
+<form method="POST" action="/products/{{id}}?_method=DELETE">
+
+  <input type="submit" value="Delete Product">
 </form>
 <p>{{message}}</p>
