--- a/views/templates/main.hbs
+++ b/views/templates/main.hbs
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Articles and Products</title>
+  <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
 
 <body>
-  {{{body}}}
+  hey everybody
 </body>
 
 </html>
