--- a/views/templates/articles/new.hbs
+++ b/views/templates/articles/new.hbs
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
 
 <body>
+  {{>header}}
   <h1>Add New Article</h1>
   <form method="POST" action="/articles">
     <label for="title">Title</label>
@@ -26,6 +28,7 @@
     <input type="submit" value="Submit">
   </form>
   <p>{{message}}</p>
+  {{>footer}}
 </body>
 
 </html>
