--- a/views/templates/products/edit.hbs
+++ b/views/templates/products/edit.hbs
@@ -1,15 +1,31 @@
-<h1>Add New Product</h1>
-<form method="POST" action="/products/{{id}}?_method=PUT">
-  <label for="name">Name</label>
-  <input type="text" name="name" id="name" value="{{name}}">
-  <label for="price">Price</label>
-  <input type="text" name="price" id="price" value="{{price}}">
-  <label for="inventory">Inventory</label>
-  <input type="text" name="inventory" id="inventory" value="{{inventory}}">
-  <input type="submit" value="Submit">
-</form>
-<form method="POST" action="/products/{{id}}?_method=DELETE">
+<!DOCTYPE html>
+<html lang="en">
 
-  <input type="submit" value="Delete Product">
-</form>
-<p>{{message}}</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="../../css/styles.css">
+</head>
+
+<body>
+
+  <h1>Add New Product</h1>
+  <form method="POST" action="/products/{{id}}?_method=PUT">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" value="{{name}}">
+    <label for="price">Price</label>
+    <input type="text" name="price" id="price" value="{{price}}">
+    <label for="inventory">Inventory</label>
+    <input type="text" name="inventory" id="inventory" value="{{inventory}}">
+    <input type="submit" value="Submit">
+  </form>
+  <form method="POST" action="/products/{{id}}?_method=DELETE">
+
+    <input type="submit" value="Delete Product">
+  </form>
+  <p>{{message}}</p>
+</body>
+
+</html>
