--- a/views/templates/products/new.hbs
+++ b/views/templates/products/new.hbs
@@ -1,11 +1,26 @@
-<h1>Add New Product</h1>
-<form method="post" action="/products">
-  <label for="name">Name</label>
-  <input type="text" name="name" id="name">
-  <label for="price">Price</label>
-  <input type="text" name="price" id="price" placeholder="$0">
-  <label for="inventory">Inventory</label>
-  <input type="text" name="inventory" id="inventory" placeholder="0">
-  <input type="submit" value="Submit">
-</form>
-<p>{{message}}</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="../../css/styles.css">
+</head>
+
+<body>
+  <h1>Add New Product</h1>
+  <form method="post" action="/products">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name">
+    <label for="price">Price</label>
+    <input type="text" name="price" id="price" placeholder="$0">
+    <label for="inventory">Inventory</label>
+    <input type="text" name="inventory" id="inventory" placeholder="0">
+    <input type="submit" value="Submit">
+  </form>
+  <p>{{message}}</p>
+</body>
+
+</html>
