--- a/views/templates/main.hbs
+++ b/views/templates/main.hbs
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Articles and Products</title>
-  <link rel="stylesheet" type="text/css" href="../../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  {{!-- {{>fonts}}
+ --}}
+  <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39|Monoton" rel="stylesheet">
+
 </head>
 
 <body>
-  hey everybody
+  {{>header}}
 </body>
 
 </html>
