--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,1 +1,26 @@
-<h1>Articles and Products Express</h1>
+<div id="headerBox">
+  <h1>Articles and Products Express</h1>
+  <div id="navBar">
+
+    <div class="navBox">
+      <form class="navButton" method="Get" action="/articles">
+        <input type="submit" value="Articles">
+      </form>
+    </div>
+
+    <div class="navBox">
+      <form class="navButton" method="Get" action="/">
+
+        <input type="submit" value="Home">
+      </form>
+    </div>
+
+
+    <div class="navBox">
+      <form class="navButton" method="Get" action="/products">
+
+        <input type="submit" value="Products">
+      </form>
+    </div>
+  </div>
+</div>
