--- a/views/templates/articles/index.hbs
+++ b/views/templates/articles/index.hbs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 
 <body>
@@ -24,6 +24,10 @@
   </form>
 
   {{/each}}
+  <form method="Get" action="/articles/new">
+
+    <input type="submit" value="Create new article">
+  </form>
 
   {{>footer}}
 </body>
