--- a/views/templates/articles/new.hbs
+++ b/views/templates/articles/new.hbs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="../../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     </br>
     <label for="body">Body</label>
     </br>
-    <input name="body" id="body">
+    <input type='text' name="body" id="body">
     </br>
     <input type="submit" value="Submit">
   </form>
