--- a/views/templates/products/product.hbs
+++ b/views/templates/products/product.hbs
@@ -23,6 +23,11 @@
     <input type="submit" value="EDIT">
   </form>
   {{>footer}}
+  <form method="GET" action="/products">
+
+    <input type="submit" value="Back to Products">
+  </form>
+  {{>script}}
 </body>
 
 </html>
