--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,7 @@
+$purple: #ff6f69;
+
 body {
-  background-color: #5b9aa0;
+  background-color: whitesmoke;
   color: black;
   text-align: center;
   margin: 0;
@@ -9,11 +11,15 @@ body {
 #navBar {
   display: flex;
   justify-content: space-around;
-  background-color: #622569;
+  background-color: $purple;
+  top: 0;
+  width: 100%;
 }
 
 #headerBox {
-  background-color: #622569;
+  background-color: $purple;
+  top: 0;
+  width: 100%;
 }
 // .navButton {
 //   background-color: white;
@@ -24,16 +30,37 @@ body {
 input[type='button'],
 input[type='submit'],
 input[type='reset'] {
-  background-color: #4caf50;
+  background-color: white;
   border: none;
-  color: white;
+  color: black;
+  font-size: 20px;
   padding: 16px 32px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
+  border-radius: 3%;
+  border: solid 1px black;
 }
 
 input[type='text'] {
-  background-color: #3cbc8d;
-  color: white;
+  background-color: #ffeead;
+  color: black;
+}
+
+.productBox,
+.articleBox {
+  background-color: #ffeead;
+  border: solid 1px black;
+  margin: 5px;
+  padding: 10px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 102px;
 }
