--- a/views/templates/articles/index.hbs
+++ b/views/templates/articles/index.hbs
@@ -14,15 +14,17 @@
   <p>{{message}}</p>
   <h1>Articles</h1>
   {{#each articles}}
-  <h2>{{title}}</h2>
-  <h3>by: {{author}}</h3>
-  <p>{{body}}</p>
-  </br>
-  <form method="Get" action="/articles/{{title}}">
+  <div class="articleBox">
+    <h2>{{title}}</h2>
+    <h3>by: {{author}}</h3>
+    <p>{{body}}</p>
+    </br>
+    <form method="Get" action="/articles/{{title}}">
 
-    <input type="submit" value="Go to article page">
-  </form>
+      <input type="submit" value="Go to article page">
+    </form>
 
+  </div>
   {{/each}}
   <form method="Get" action="/articles/new">
 
@@ -30,6 +32,7 @@
   </form>
 
   {{>footer}}
+  {{>script}}
 </body>
 
 </html>
