--- a/views/templates/products/edit.hbs
+++ b/views/templates/products/edit.hbs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+  {{>header}}
   <h1>Add New Product</h1>
   <form method="POST" action="/products/{{id}}?_method=PUT">
     <label for="name">Name</label>
@@ -26,6 +26,8 @@
     <input type="submit" value="Delete Product">
   </form>
   <p>{{message}}</p>
+  {{>footer}}
+  {{>script}}
 </body>
 
 </html>
