--- a/views/templates/products/index.hbs
+++ b/views/templates/products/index.hbs
@@ -14,15 +14,17 @@
   <p>{{message}}</p>
   <h1>Products</h1>
   {{#each products}}
-  <h2>Name: {{name}}</h2>
-  <h3>Price: {{price}}</h3>
-  <p>Inventory in stock: {{inventory}}</p>
-  <p>ID Number: {{id}}</p>
-  </br>
-  <form method="Get" action="/products/{{id}}">
+  <div class="productBox">
+    <h2>Name: {{name}}</h2>
+    <h3>Price: {{price}}</h3>
+    <p>Inventory in stock: {{inventory}}</p>
+    <p>ID Number: {{id}}</p>
+    </br>
+    <form method="Get" action="/products/{{id}}">
 
-    <input type="submit" value="Go to product page">
-  </form>
+      <input type="submit" value="Go to product page">
+    </form>
+  </div>
   {{/each}}
   <form method="Get" action="/products/new">
 
@@ -30,6 +32,7 @@
   </form>
 
   {{>footer}}
+  <script src="js/logic.js"></script>
 </body>
 
 </html>
