--- a/views/templates/products/new.hbs
+++ b/views/templates/products/new.hbs
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  {{>header}}
   <h1>Add New Product</h1>
   <form method="post" action="/products">
     <label for="name">Name</label>
@@ -21,6 +22,8 @@
     <input type="submit" value="Submit">
   </form>
   <p>{{message}}</p>
+  {{>footer}}
+  {{>script}}
 </body>
 
 </html>
