--- a/views/templates/main.hbs
+++ b/views/templates/main.hbs
@@ -7,15 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Articles and Products</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
-  {{!-- {{>fonts}}
- --}}
-  <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39|Monoton" rel="stylesheet">
+  {{>fonts}}
 
 </head>
 
 <body>
   {{>header}}
-  Welcome to article and product express
+  <div id="welcome">Welcome to Article and Products Express!</div>
+  <img src="http://www.housingeurope.eu/image/163/sectionheaderpng/resourcesdef.png" alt="">
   {{>footer}}
   {{>script}}
 </body>
