--- a/views/templates/products/edit.hbs
+++ b/views/templates/products/edit.hbs
@@ -27,7 +27,7 @@
     <input type="submit" value="Delete Product">
   </form>
   <p>{{message}}</p>
-  {{>footer}}
+  {{>footerSmall}}
   {{>script}}
 </body>
 
