--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,14 +44,14 @@ input[type='reset'] {
   /* Safari */
   transition-duration: 0.4s; }
 
-input[type='button']:hover {
-  background-color: #4caf50;
-  /* Green */
-  color: white; }
+input[type='submit']:hover {
+  color: #e9443e; }
 
 input[type='text'] {
-  background-color: #ffeead;
-  color: black; }
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box; }
 
 .fa-box-open,
 .fa-newspaper {
@@ -71,3 +71,7 @@ input[type='text'] {
 
 .sticky + .content {
   padding-top: 102px; }
+
+#smallLogo {
+  width: 100%;
+  height: 10px; }
