--- a/views/templates/products/new.hbs
+++ b/views/templates/products/new.hbs
@@ -23,7 +23,7 @@
     <input type="submit" value="Submit">
   </form>
   <p>{{message}}</p>
-  {{>footer}}
+  {{>footerSmall}}
   {{>script}}
 </body>
 
