--- a/views/templates/products/product.hbs
+++ b/views/templates/products/product.hbs
@@ -23,7 +23,7 @@
 
     <input type="submit" value="EDIT">
   </form>
-  {{>footer}}
+  {{>footerSmall}}
   <form method="GET" action="/products">
 
     <input type="submit" value="Back to Products">
