--- a/views/templates/articles/index.hbs
+++ b/views/templates/articles/index.hbs
@@ -12,7 +12,7 @@
 
 <body>
   {{>header}}
-  <p>{{message}}</p>
+  <p class="messageBox">{{message}}</p>
   <h1>Articles</h1>
   <form method="Get" action="/articles/new">
 
