--- a/views/templates/products/product.hbs
+++ b/views/templates/products/product.hbs
@@ -13,7 +13,7 @@
 <body>
   {{>header}}
 
-  <h2>Name: {{name}}</h2>
+  <h2 class="titleFont">Name: {{name}}</h2>
   <h3>Price: {{price}}</h3>
   <p>Inventory in stock: {{inventory}}</p>
   <p>ID Number: {{id}}</p>
