--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,6 +24,9 @@ body {
   margin-right: 0%;
   top: 0px; }
 
+#barcode {
+  font-family: 'Libre Barcode 39', cursive; }
+
 input[type='button'],
 input[type='submit'],
 input[type='reset'] {
@@ -75,3 +78,8 @@ input[type='text'] {
 #smallLogo {
   width: 100%;
   height: 10px; }
+
+.messageBox {
+  font-size: 30px;
+  color: #e9443e;
+  border: 1px dashed #ff6f69; }
