--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -31,6 +31,9 @@ body {
   margin-right: 0%;
   top: 0px;
 }
+#barcode {
+  font-family: 'Libre Barcode 39', cursive;
+}
 
 input[type='button'],
 input[type='submit'],
@@ -103,3 +106,9 @@ input[type='text'] {
 //   width: 200px;
 //   height: 120px;
 // }
+
+.messageBox {
+  font-size: 30px;
+  color: #e9443e;
+  border: 1px dashed #ff6f69;
+}
