--- a/views/templates/articles/edit.hbs
+++ b/views/templates/articles/edit.hbs
@@ -16,7 +16,7 @@
   <form method="POST" action="/articles/{{title}}?_method=PUT">
     <label for="title">Title</label>
     </br>
-    <input type="text" name="title" id="title" value="{{title}}">
+    <input type="text" name="title" id="title" readonly value="{{title}}">
     </br>
     <label for="author">Author</label>
     </br>
