--- a/views/templates/products/edit.hbs
+++ b/views/templates/products/edit.hbs
@@ -15,7 +15,7 @@
   <h1>Add New Product</h1>
   <form method="POST" action="/products/{{id}}?_method=PUT">
     <label for="name">Name</label>
-    <input type="text" name="name" id="name" value="{{name}}">
+    <input type="text" name="name" id="name" readonly value="{{name}}">
     <label for="price">Price</label>
     <input type="text" name="price" id="price" value="{{price}}">
     <label for="inventory">Inventory</label>
