get product works

--- a/views/templates/products/index.hbs
+++ b/views/templates/products/index.hbs
@@ -18,7 +18,7 @@
 
     <input type="submit" value="Create new product">
   </form>
-  {{#each products}}
+  {{#each rows}}
   <div class="productBox">
     <h2 class="titleFont">Name: {{name}}</h2>
     <h3>Price: {{price}}</h3>
