--- a/views/templates/articles/index.hbs
+++ b/views/templates/articles/index.hbs
@@ -18,7 +18,7 @@
 
     <input type="submit" value="Create new article">
   </form>
-  {{#each articles}}
+  {{#each rows}}
   <div class="articleBox">
     <h2>{{title}}</h2>
     <h3>by: {{author}}</h3>
